{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "93ee60bf-bcf9-4486-8f2d-510defce52be",
            "actions": [
                {
                    "name": "Mouse1",
                    "type": "Button",
                    "id": "e81936ff-df1f-46ac-a199-0bb606e6e76b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse2",
                    "type": "Button",
                    "id": "a6088127-a3a0-4293-aa98-e0db239813a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraControlMode",
                    "type": "Value",
                    "id": "d7b2c307-d200-4014-8199-d74296b7b9c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShiftButton",
                    "type": "Value",
                    "id": "8ecaa37c-53d7-4ff7-8cbf-d6aa89badbd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AbilityButton1",
                    "type": "Button",
                    "id": "bd868db1-b55a-4198-806c-2634fd10a7a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityButton2",
                    "type": "Button",
                    "id": "eb5ea0f5-0307-4f3d-8c75-c4c73aefbfc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityButton3",
                    "type": "Button",
                    "id": "e0ace250-559d-4053-a732-22c24ecfa01e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityButton4",
                    "type": "Button",
                    "id": "13c4e79a-f618-49c9-9039-89a32aa9e070",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ca7ec1f3-c144-484c-9a8a-29d355b72add",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b32bd15c-b38c-498e-98a0-ac9e8e2446d8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cc0e5fc-a0e4-4796-beb5-f8e8219e687e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraControlMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f88bb466-92b4-4daf-a959-5222dc166c61",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01698943-0736-4110-a4de-78b6fb93ee34",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityButton1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e902b21-e8f7-4e6a-936d-eb8ce0904483",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityButton2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17549b03-6a15-4f4f-88ed-853864c28513",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityButton3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f657940-9892-4ff2-9d53-68b61770707c",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityButton4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}